@@ -70,5 +70,5 @@
     </copy>
   </target>
 
-  <target name="dist-maven" depends="dist-maven-src-java"/>
+  <target name="-dist-maven" depends="-dist-maven-src-java"/>
 </project>
