@@ -254,6 +254,9 @@ Build
   transitive dependency resolution for all depended-on artifacts by putting
   an exclusion for each transitive dependency in the <dependencyManagement>
   section of the grandparent POM. (Steve Rowe)
+  
+* LUCENE-5322: Clean up / simplify Maven-related Ant targets.
+  (Steve Rowe)
 
 Tests
 
